Package_Tools/include-C/gstreamer-ges-1.24.2/in_Arbeit/ges_timeline_element.h

#define GES_TYPE_TIMELINE_ELEMENT             (ges_timeline_element_get_type ())
//GES_DECLARE_TYPE (TimelineElement, timeline_element, TIMELINE_ELEMENT);

/**
 * GES_TIMELINE_ELEMENT_START:
 * @obj: A #GESTimelineElement
 *
 * The #GESTimelineElement:start of @obj.
 */
#define GES_TIMELINE_ELEMENT_START(obj) (((GESTimelineElement*)obj)->start)
/**
 * GES_TIMELINE_ELEMENT_END:
 * @obj: A #GESTimelineElement
 *
 * The end position of @obj: #GESTimelineElement:start +
 * #GESTimelineElement:duration.
 */
#define GES_TIMELINE_ELEMENT_END(obj) ((((GESTimelineElement*)obj)->start) + (((GESTimelineElement*)obj)->duration))
/**
 * GES_TIMELINE_ELEMENT_INPOINT:
 * @obj: A #GESTimelineElement
 *
 * The #GESTimelineElement:in-point of @obj.
 */
#define GES_TIMELINE_ELEMENT_INPOINT(obj) (((GESTimelineElement*)obj)->inpoint)
/**
 * GES_TIMELINE_ELEMENT_DURATION:
 * @obj: A #GESTimelineElement
 *
 * The #GESTimelineElement:duration of @obj.
 */
#define GES_TIMELINE_ELEMENT_DURATION(obj) (((GESTimelineElement*)obj)->duration)
/**
 * GES_TIMELINE_ELEMENT_MAX_DURATION:
 * @obj: A #GESTimelineElement
 *
 * The #GESTimelineElement:max-duration of @obj.
 */
#define GES_TIMELINE_ELEMENT_MAX_DURATION(obj) (((GESTimelineElement*)obj)->maxduration)
/**
 * GES_TIMELINE_ELEMENT_PRIORITY:
 * @obj: A #GESTimelineElement
 *
 * The #GESTimelineElement:priority of @obj.
 */
#define GES_TIMELINE_ELEMENT_PRIORITY(obj) (((GESTimelineElement*)obj)->priority)
/**
 * GES_TIMELINE_ELEMENT_NO_LAYER_PRIORITY:
 *
 * Layer priority when a timeline element is not in any layer.
 */
#define GES_TIMELINE_ELEMENT_NO_LAYER_PRIORITY ((guint32) -1)
/**
 * GES_TIMELINE_ELEMENT_LAYER_PRIORITY:
 * @obj: The object to retrieve the layer priority from
 *
 * See #ges_timeline_element_get_layer_priority.
 */
#define GES_TIMELINE_ELEMENT_LAYER_PRIORITY(obj) (ges_timeline_element_get_layer_priority(((GESTimelineElement*)obj)))
/**
 * GES_TIMELINE_ELEMENT_PARENT:
 * @obj: A #GESTimelineElement
 *
 * The #GESTimelineElement:parent of @obj.
 */
#define GES_TIMELINE_ELEMENT_PARENT(obj) (((GESTimelineElement*)obj)->parent)
/**
 * GES_TIMELINE_ELEMENT_TIMELINE:
 * @obj: A #GESTimelineElement
 *
 * The #GESTimelineElement:timeline of @obj.
 */
#define GES_TIMELINE_ELEMENT_TIMELINE(obj) (((GESTimelineElement*)obj)->timeline)
/**
 * GES_TIMELINE_ELEMENT_NAME:
 * @obj: A #GESTimelineElement
 *
 * The #GESTimelineElement:name of @obj.
 */
#define GES_TIMELINE_ELEMENT_NAME(obj) (((GESTimelineElement*)obj)->name)
extern
GESTimelineElement * ges_timeline_element_get_toplevel_parent         (GESTimelineElement *self);
extern
GESTimelineElement * ges_timeline_element_get_parent                  (GESTimelineElement * self);
extern
gboolean             ges_timeline_element_set_parent                  (GESTimelineElement *self,
                                                                       GESTimelineElement *parent);
extern
gboolean             ges_timeline_element_set_timeline                (GESTimelineElement *self,
                                                                       GESTimeline *timeline);
extern
gboolean             ges_timeline_element_set_start                   (GESTimelineElement *self,
                                                                       GstClockTime start);
extern
gboolean             ges_timeline_element_set_inpoint                 (GESTimelineElement *self,
                                                                       GstClockTime inpoint);
extern
gboolean             ges_timeline_element_set_duration                (GESTimelineElement *self,
                                                                       GstClockTime duration);
extern
gboolean             ges_timeline_element_set_max_duration            (GESTimelineElement *self,
                                                                       GstClockTime maxduration);
gboolean             ges_timeline_element_set_priority                (GESTimelineElement *self,
                                                                       guint32 priority);
extern
GstClockTime         ges_timeline_element_get_start                   (GESTimelineElement *self);
extern
GstClockTime         ges_timeline_element_get_inpoint                 (GESTimelineElement *self);
extern
GstClockTime         ges_timeline_element_get_duration                (GESTimelineElement *self);
extern
GstClockTime         ges_timeline_element_get_max_duration            (GESTimelineElement *self);
extern
GESTimeline *        ges_timeline_element_get_timeline                (GESTimelineElement *self);
extern
guint32              ges_timeline_element_get_priority                (GESTimelineElement *self);
extern
gboolean             ges_timeline_element_ripple                      (GESTimelineElement *self,
                                                                       GstClockTime  start);
extern
gboolean             ges_timeline_element_ripple_end                  (GESTimelineElement *self,
                                                                       GstClockTime  end);
extern
gboolean             ges_timeline_element_roll_start                  (GESTimelineElement *self,
                                                                       GstClockTime  start);
extern
gboolean             ges_timeline_element_roll_end                    (GESTimelineElement *self,
                                                                       GstClockTime  end);
extern
gboolean             ges_timeline_element_trim                        (GESTimelineElement *self,
                                                                       GstClockTime  start);
extern
GESTimelineElement * ges_timeline_element_copy                        (GESTimelineElement *self,
                                                                       gboolean deep);
extern
gchar  *             ges_timeline_element_get_name                    (GESTimelineElement *self);
extern
gboolean             ges_timeline_element_set_name                    (GESTimelineElement *self,
                                                                       const gchar *name);
extern
GParamSpec **        ges_timeline_element_list_children_properties    (GESTimelineElement *self,
                                                                       guint *n_properties);
extern
gboolean             ges_timeline_element_lookup_child                (GESTimelineElement *self,
                                                                       const gchar *prop_name,
                                                                       GObject  **child,
                                                                       GParamSpec **pspec);
extern
void                 ges_timeline_element_get_child_property_by_pspec (GESTimelineElement * self,
                                                                       GParamSpec * pspec, GValue * value);
extern
void                 ges_timeline_element_get_child_property_valist   (GESTimelineElement * self,
                                                                       const gchar * first_property_name,
                                                                       va_list var_args);
extern
void                 ges_timeline_element_get_child_properties        (GESTimelineElement *self,
                                                                       const gchar * first_property_name, ...) ;
extern
void                 ges_timeline_element_set_child_property_valist   (GESTimelineElement * self,
                                                                       const gchar * first_property_name,
                                                                       va_list var_args);
extern
void                 ges_timeline_element_set_child_property_by_pspec (GESTimelineElement * self,
                                                                       GParamSpec * pspec,
                                                                       const GValue * value);
extern
void                 ges_timeline_element_set_child_properties        (GESTimelineElement * self,
                                                                       const gchar * first_property_name,
                                                                       ...) ;
extern
gboolean             ges_timeline_element_set_child_property          (GESTimelineElement *self,
                                                                       const gchar *property_name,
                                                                       const GValue * value);
extern
gboolean             ges_timeline_element_set_child_property_full     (GESTimelineElement *self,
                                                                       const gchar *property_name,
                                                                       const GValue * value,
                                                                       GError ** error);
extern
gboolean             ges_timeline_element_get_child_property          (GESTimelineElement *self,
                                                                       const gchar *property_name,
                                                                       GValue * value);
extern
gboolean             ges_timeline_element_add_child_property          (GESTimelineElement * self,
                                                                       GParamSpec *pspec,
                                                                       GObject *child);
extern
gboolean             ges_timeline_element_remove_child_property       (GESTimelineElement * self,
                                                                       GParamSpec *pspec);
extern
GESTimelineElement * ges_timeline_element_paste                       (GESTimelineElement * self,
                                                                       GstClockTime paste_position);
extern
GESTrackType         ges_timeline_element_get_track_types             (GESTimelineElement * self);
extern
gboolean             ges_timeline_element_get_natural_framerate       (GESTimelineElement *self,
                                                                       gint *framerate_n,
                                                                       gint *framerate_d);
extern
guint32 ges_timeline_element_get_layer_priority                       (GESTimelineElement * self);
extern
gboolean ges_timeline_element_edit                                    (GESTimelineElement * self,
                                                                       GList * layers,
                                                                       gint64 new_layer_priority,
                                                                       GESEditMode mode,
                                                                       GESEdge edge,
                                                                       guint64 position);
extern
gboolean ges_timeline_element_edit_full                                (GESTimelineElement * self,
                                                                       gint64 new_layer_priority,
                                                                       GESEditMode mode,
                                                                       GESEdge edge,
                                                                       guint64 position,
                                                                       GError ** error);