Package_Tools/include-C/gstreamer-ges-1.24.2/in_Arbeit/fertig/ges_timeline_element.pp


function ges_timeline_element_get_toplevel_parent(self:PGESTimelineElement):PGESTimelineElement;cdecl;external;
function ges_timeline_element_get_parent(self:PGESTimelineElement):PGESTimelineElement;cdecl;external;
function ges_timeline_element_set_parent(self:PGESTimelineElement; parent:PGESTimelineElement):Tgboolean;cdecl;external;
function ges_timeline_element_set_timeline(self:PGESTimelineElement; timeline:PGESTimeline):Tgboolean;cdecl;external;
function ges_timeline_element_set_start(self:PGESTimelineElement; start:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_set_inpoint(self:PGESTimelineElement; inpoint:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_set_duration(self:PGESTimelineElement; duration:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_set_max_duration(self:PGESTimelineElement; maxduration:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_set_priority(self:PGESTimelineElement; priority:Tguint32):Tgboolean;cdecl;external;
function ges_timeline_element_get_start(self:PGESTimelineElement):TGstClockTime;cdecl;external;
function ges_timeline_element_get_inpoint(self:PGESTimelineElement):TGstClockTime;cdecl;external;
function ges_timeline_element_get_duration(self:PGESTimelineElement):TGstClockTime;cdecl;external;
function ges_timeline_element_get_max_duration(self:PGESTimelineElement):TGstClockTime;cdecl;external;
function ges_timeline_element_get_timeline(self:PGESTimelineElement):PGESTimeline;cdecl;external;
function ges_timeline_element_get_priority(self:PGESTimelineElement):Tguint32;cdecl;external;
function ges_timeline_element_ripple(self:PGESTimelineElement; start:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_ripple_end(self:PGESTimelineElement; end:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_roll_start(self:PGESTimelineElement; start:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_roll_end(self:PGESTimelineElement; end:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_trim(self:PGESTimelineElement; start:TGstClockTime):Tgboolean;cdecl;external;
function ges_timeline_element_copy(self:PGESTimelineElement; deep:Tgboolean):PGESTimelineElement;cdecl;external;
function ges_timeline_element_get_name(self:PGESTimelineElement):Pgchar;cdecl;external;
(* Const before type ignored *)
function ges_timeline_element_set_name(self:PGESTimelineElement; name:Pgchar):Tgboolean;cdecl;external;
function ges_timeline_element_list_children_properties(self:PGESTimelineElement; n_properties:Pguint):^PGParamSpec;cdecl;external;
(* Const before type ignored *)
function ges_timeline_element_lookup_child(self:PGESTimelineElement; prop_name:Pgchar; child:PPGObject; pspec:PPGParamSpec):Tgboolean;cdecl;external;
procedure ges_timeline_element_get_child_property_by_pspec(self:PGESTimelineElement; pspec:PGParamSpec; value:PGValue);cdecl;external;
(* Const before type ignored *)
procedure ges_timeline_element_get_child_property_valist(self:PGESTimelineElement; first_property_name:Pgchar; var_args:Tva_list);cdecl;external;
(* Const before type ignored *)
procedure ges_timeline_element_get_child_properties(self:PGESTimelineElement; first_property_name:Pgchar; args:array of const);cdecl;external;
procedure ges_timeline_element_get_child_properties(self:PGESTimelineElement; first_property_name:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure ges_timeline_element_set_child_property_valist(self:PGESTimelineElement; first_property_name:Pgchar; var_args:Tva_list);cdecl;external;
(* Const before type ignored *)
procedure ges_timeline_element_set_child_property_by_pspec(self:PGESTimelineElement; pspec:PGParamSpec; value:PGValue);cdecl;external;
(* Const before type ignored *)
procedure ges_timeline_element_set_child_properties(self:PGESTimelineElement; first_property_name:Pgchar; args:array of const);cdecl;external;
procedure ges_timeline_element_set_child_properties(self:PGESTimelineElement; first_property_name:Pgchar);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function ges_timeline_element_set_child_property(self:PGESTimelineElement; property_name:Pgchar; value:PGValue):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function ges_timeline_element_set_child_property_full(self:PGESTimelineElement; property_name:Pgchar; value:PGValue; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
function ges_timeline_element_get_child_property(self:PGESTimelineElement; property_name:Pgchar; value:PGValue):Tgboolean;cdecl;external;
function ges_timeline_element_add_child_property(self:PGESTimelineElement; pspec:PGParamSpec; child:PGObject):Tgboolean;cdecl;external;
function ges_timeline_element_remove_child_property(self:PGESTimelineElement; pspec:PGParamSpec):Tgboolean;cdecl;external;
function ges_timeline_element_paste(self:PGESTimelineElement; paste_position:TGstClockTime):PGESTimelineElement;cdecl;external;
function ges_timeline_element_get_track_types(self:PGESTimelineElement):TGESTrackType;cdecl;external;
function ges_timeline_element_get_natural_framerate(self:PGESTimelineElement; framerate_n:Pgint; framerate_d:Pgint):Tgboolean;cdecl;external;
function ges_timeline_element_get_layer_priority(self:PGESTimelineElement):Tguint32;cdecl;external;
function ges_timeline_element_edit(self:PGESTimelineElement; layers:PGList; new_layer_priority:Tgint64; mode:TGESEditMode; edge:TGESEdge; 
           position:Tguint64):Tgboolean;cdecl;external;
function ges_timeline_element_edit_full(self:PGESTimelineElement; new_layer_priority:Tgint64; mode:TGESEditMode; edge:TGESEdge; position:Tguint64; 
           error:PPGError):Tgboolean;cdecl;external;

implementation

{ was #define dname def_expr }
function GES_TYPE_TIMELINE_ELEMENT : longint; { return type might be wrong }
  begin
    GES_TYPE_TIMELINE_ELEMENT:=ges_timeline_element_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_START(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_START:=(PGESTimelineElement(obj))^.start;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_END(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_END:=((PGESTimelineElement(obj))^.start)+((PGESTimelineElement(obj))^.duration);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_INPOINT(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_INPOINT:=(PGESTimelineElement(obj))^.inpoint;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_DURATION(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_DURATION:=(PGESTimelineElement(obj))^.duration;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_MAX_DURATION(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_MAX_DURATION:=(PGESTimelineElement(obj))^.maxduration;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_PRIORITY(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_PRIORITY:=(PGESTimelineElement(obj))^.priority;
end;

{ was #define dname def_expr }
function GES_TIMELINE_ELEMENT_NO_LAYER_PRIORITY : Tguint32;
  begin
    GES_TIMELINE_ELEMENT_NO_LAYER_PRIORITY:=Tguint32(-(1));
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_LAYER_PRIORITY(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_LAYER_PRIORITY:=ges_timeline_element_get_layer_priority(PGESTimelineElement(obj));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_PARENT(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_PARENT:=(PGESTimelineElement(obj))^.parent;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_TIMELINE(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_TIMELINE:=(PGESTimelineElement(obj))^.timeline;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GES_TIMELINE_ELEMENT_NAME(obj : longint) : longint;
begin
  GES_TIMELINE_ELEMENT_NAME:=(PGESTimelineElement(obj))^.name;
end;


end.
